UI: Fix spacing/layout of votes

--- a/frontend/src/components/Headshot/Headshot.css
+++ b/frontend/src/components/Headshot/Headshot.css
@@ -1,4 +1,4 @@
-img.headshot {
-   width: auto;
-   height: auto; 
+.headshot-container {
+   width: 70px;
+   height: 70px; 
 }
